--- a/r_style.css
+++ b/r_style.css
@@ -26,7 +26,8 @@
     font-weight: 300;
 }
 
-.section-intro {
+.section-intro 
+{
     height: 700px;
     background: url('https://img.freepik.com/free-photo/various-vegetables-black-table-with-space-message_1220-616.jpg?size=626&ext=jpg&ga=GA1.2.231040245.1680093066&semt=ais');
     background-size: cover;
@@ -37,7 +38,8 @@
     align-items: center;
 }
 
-.section-intro h1 {
+.section-intro h1 
+{
     font-family:Georgia, 'Times New Roman', Times, serif;
     text-align: right;
     text-decoration: wavy;
@@ -60,33 +62,40 @@
     flex: 1;
 }
 
-.about-section {
+.about-section
+{
+    background: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSyfXpiK9NMwEi_gTvuiBmiA3QXkrum3bd0d5aGT7KYxGuzIW2GA2B_E9iZm_Kj1L4WA2k&usqp=CAU');
     display: flex;
+    background-size: cover;
     align-items: center;
     text-align: left;
-    background-color: #f3f3f3c0;
+    background-color: #eff8fcc0;
     padding: 100px 250px;
+    height:auto;
     top: 5%;
     position:relative;
     flex-direction: column;
     justify-content: center;
 }
 
-.link-to-book {
+.link-to-book 
+{
     color: #ca6868;
     display: block;
     border: 2px solid #8ac7e4;
     padding: 5px 10px;
 }
 
-a.link-to-book:hover {
+a.link-to-book:hover 
+{
     background-color: #6d2525;
     color: #dfcfd4;
     text-decoration: none;
 }
 
 .about-section p,
-.about-section h3 {
+.about-section h3 
+{
     text-align:justify;
     width: 120%;
     margin:3rem;
@@ -98,12 +107,11 @@ a.link-to-book:hover {
 .carousel-inner {
     height: 500px;
     width: 500px;
-    flex-direction:column;
-    display: flex;
-    flex: 1;
+    flex-direction:row;
+    display:flexbox;
+    flex: 3;
     padding: 3px;
-    border: 1px solid rgb(56, 24, 55);
-
+    border: 1px solid rgb(236, 224, 236);
 }
 
 .row-flex {
@@ -121,7 +129,7 @@ a.link-to-book:hover {
 .btn.btn-primary {
     font-family: 'Big Shoulders Text', cursive;
     color: #ffffff;
-    background-color: #040b14;
+    background-color: #486c96;
     text-transform: uppercase;
     font-size: 16px;
     padding: 5px 10px;
@@ -130,7 +138,7 @@ a.link-to-book:hover {
 }
 
 .btn.btn-primary:hover {
-    background-color: #747474;
+    background-color: #350a0a;
 }
 .opening-time,
 .contact-adress {
@@ -143,9 +151,24 @@ a.link-to-book:hover {
     font-size: 1.3em;
 }
 
-.opening-time p span,
+.opening-time p span
+ {
+    text-align: center;
+    height: 100px;
+    width: 200px;
+    flex-direction:column;
+    display:list-item;
+    flex: 3;
+    padding: 2px;
+}
+
 .contact-adress p span {
-    display: block;
+    height: 100px;
+    width: 200px;
+    flex-direction:column;
+    display:inline-flexbox;
+    flex: 3;
+    padding: 2px;
 }
 
 @media (min-width:577px) and (max-width: 800px) {
@@ -164,11 +187,20 @@ a.link-to-book:hover {
         width: 500px;
         flex-direction:column;
         display: flex;
-        flex: 3;
+        flex: 50%;
         padding: 3px;
-        border: 2px solid rgb(56, 24, 55);
+        border: 2px solid rgb(238, 224, 237);
     }
+    .flex-item-right{
+        padding: 10px;
+        flex: 50%;
 
+    }
+    .flex-item-left{
+        padding: 10px;
+        flex: 50%;
+
+    }
     .row-flex {
         display: flex;
         flex-direction: column;
@@ -194,7 +226,7 @@ a.link-to-book:hover {
     }
 
     .carousel-inner {
-        height: auto;
+        height:auto;
 
     }
 
@@ -212,11 +244,25 @@ a.link-to-book:hover {
         font-size: 15px;
     }
 
-    .opening-time p span,
+    .opening-time p span {
+        font-size: 15px;
+        text-align:center;
+        height: 500px;
+        width: 500px;
+        flex-direction:column;
+        display: flex;
+        flex: 3;
+        padding: 3px;
+    }
     .contact-adress p span {
         font-size: 15px;
-        text-align:right;
-        
+        text-align:center;
+        height: 500px;
+        width: 500px;
+        flex-direction:column;
+        display: flex;
+        flex: 3;
+        padding: 3px;
     }
 
 }
