--- a/r_style.css
+++ b/r_style.css
@@ -105,11 +105,14 @@ a.link-to-book:hover
 }
 
 .carousel-inner {
-    height: 500px;
-    width: 500px;
+    height: 650px;
+    width: 300%;
+    background-color: #350a0a;
     flex-direction:row;
-    display:flexbox;
-    flex: 3;
+    justify-content:space-evenly;
+    align-items: center;
+    display:flex;
+    flex-wrap: wrap;
     padding: 3px;
     border: 1px solid rgb(236, 224, 236);
 }
@@ -184,9 +187,10 @@ a.link-to-book:hover
     }
 
     .carousel-inner {
-        height: 500px;
-        width: 500px;
+        height: 700px;
+        width: 700px;
         flex-direction:column;
+        align-items: center;
         display: flex;
         flex: 50%;
         padding: 3px;
